--- a/resources/views/layouts/main.edge
+++ b/resources/views/layouts/main.edge
@@ -28,6 +28,9 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
+        <a class="nav-link" href="{{ route('camara.index') }}">Cams</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="#">Menu</a>
         </li>
         <li class="nav-item dropdown">
