--- a/resources/views/novedad/index.edge
+++ b/resources/views/novedad/index.edge
@@ -4,62 +4,61 @@
 @set('BUTTON_NEW', 'Agregar novedad')
 @set('BUTTON_EDIT', 'Editar')
 @set('BUTTON_SHOW', 'Ver')
-@set('ROUTE_NEW', 'novedad.create')
+{{--  @set('ROUTE_NEW', 'novedad.create')
 @set('ROUTE_EDIT', 'novedad.edit')
-@set('ROUTE_SHOW', 'novedad.show')
+@set('ROUTE_SHOW', 'novedad.show')  --}}
 
 @section('content')
 <div class="d-flex align-items-center justify-content-between mb-4">
   <h1>{{ TITLE }}</h1>
-  <a class="btn btn-primary btn-sm" href="{{ route( ROUTE_NEW ) }}" role="button">{{ BUTTON_NEW }}</a>
+  <a class="btn btn-primary btn-sm" href="#" role="button">{{ BUTTON_NEW }}</a>
 </div>
 
 {{--  <nav class="nav nav-tabs">
   <a class="nav-link active" href="{{ route('novedad.index') }}">Recientes</a>
-  <a class="nav-link" href="{{ route('novedad.filter') }}">Filtradas</a>
-  <a class="nav-link" href="#">Pendientes</a>
-  <a class="nav-link" href="#">Archivadas</a>
-</nav>  --}}
+<a class="nav-link" href="{{ route('novedad.filter') }}">Filtradas</a>
+<a class="nav-link" href="#">Pendientes</a>
+<a class="nav-link" href="#">Archivadas</a>
+</nav> --}}
 
-<div class="dropdown">
+{{--  <div class="dropdown">
   <a class="btn btn-default btn-sm dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
     aria-haspopup="true" aria-expanded="false">
     Filtrar
   </a>
 
   <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-  <form action="{{ route('novedad.filter') }}" class="px-4 py-3" method="POST">
+  <form action="" class="px-4 py-3" method="POST">
       {{ csrfField() }}
-      <div class="form-group">
-        <label for="">Camara</label>
-        <select class="form-control" name="camara">
-          <option value=""></option>
-          @each(camara in camaras)
-          <option value="{{ camara.id }}" {{ camara.selected ? 'selected' : ''}}>{{ camara.nombre }}</option>
-          @endeach
-        </select>
-      </div>
-
-      <div class="form-group">
-        <label for="">Autor</label>
-        <select class="form-control" name="autor">
-          <option value=""></option>
-          <option value="1">User1</option>
-          <option value="2">User2</option>
-          <option value="3">User3</option>
-          <option value="4">User4</option>
-        </select>
-      </div>
-
-      <button type="submit" class="btn btn-primary">Filtrar</button>
-    </form>
-  </div>
+<div class="form-group">
+  <label for="">Camara</label>
+  <select class="form-control" name="camara">
+    <option value=""></option>
+    @each(camara in camaras)
+    <option value="{{ camara.id }}" {{ camara.selected ? 'selected' : ''}}>{{ camara.nombre }}</option>
+    @endeach
+  </select>
 </div>
 
+<div class="form-group">
+  <label for="">Autor</label>
+  <select class="form-control" name="autor">
+    <option value=""></option>
+    <option value="1">User1</option>
+    <option value="2">User2</option>
+    <option value="3">User3</option>
+    <option value="4">User4</option>
+  </select>
+</div>
+
+<button type="submit" class="btn btn-primary">Filtrar</button>
+</form>
+</div>
+</div> --}}
+{{--
 <table class="table table-sm">
   <thead class="thead-dark">
     <tr>
-      <th>Id</th>
       <th>Fecha</th>
       <th>Descripcion</th>
       <th>Camara</th>
@@ -69,21 +68,90 @@
   <tbody>
     @each(novedad in novedades)
     <tr>
-      <td>{{ novedad.id }}</td>
       <td>{{ datetime(novedad.fecha) }}</td>
       <td>{{ novedad.descripcion }}</td>
       <td>{{ novedad.camara.nombre }}</td>
       <td>
         <a class="btn btn-link" href="{{ route(ROUTE_EDIT, { params: { 'id': novedad.id }}) }}">{{ BUTTON_EDIT }}</a>
-        {{--  <a class="btn btn-link" href="{{ route(ROUTE_SHOW, { params: { 'id': novedad.id }})
-        }}">{{ BUTTON_SHOW }}</a> --}}
+        <a class="btn btn-link" href="{{ route(ROUTE_SHOW, { params: { 'id': novedad.id }}) }}">{{ BUTTON_SHOW }}</a>
       </td>
     </tr>
     @endeach
   </tbody>
 </table>
+  --}}
+
+<ul class="timeline">
+  @each(novedad in novedades)
+  <li class="timeline-item bg-white rounded ml-3 p-4 shadow">
+    <div class="timeline-arrow"></div>
+    <h2 class="h5 mb-0">{{ novedad.camara.nombre }}</h2>
+    <span class="small text-gray">
+      <i class="fa fa-clock-o mr-1"></i>
+      {{ datetime(novedad.fecha) }}
+    </span>
+    <p class="text-small mt-2 font-weight-light">
+      {{ novedad.descripcion }}
+    </p>
+  </li>
+  @endeach
+</ul>
 @endsection
 
+@section('stylesheets')
+<style>
+/* Timeline holder */
+ul.timeline {
+    list-style-type: none;
+    position: relative;
+    padding-left: 1.5rem;
+}
+
+ /* Timeline vertical line */
+ul.timeline:before {
+    content: ' ';
+    background: #ddd;
+    display: inline-block;
+    position: absolute;
+    left: 16px;
+    width: 4px;
+    height: 100%;
+    z-index: 400;
+    border-radius: 1rem;
+}
+
+li.timeline-item {
+    margin: 20px 0;
+}
+
+/* Timeline item arrow */
+.timeline-arrow {
+    border-top: 0.5rem solid transparent;
+    border-right: 0.5rem solid #fff;
+    border-bottom: 0.5rem solid transparent;
+    display: block;
+    position: absolute;
+    left: 2rem;
+}
+
+/* Timeline item circle marker */
+li.timeline-item::before {
+    content: ' ';
+    background: #ddd;
+    display: inline-block;
+    position: absolute;
+    border-radius: 50%;
+    border: 3px solid #fff;
+    left: 11px;
+    width: 14px;
+    height: 14px;
+    z-index: 400;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+
+</style>
+@endsection
 
 @section('javascripts')
 <script src="/js/tablesort.js"></script>
