--- a/resources/views/layouts/main.edge
+++ b/resources/views/layouts/main.edge
@@ -19,7 +19,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">AppName</a>
+    <a class="navbar-brand" href="/">Wepkit</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -28,12 +28,12 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
-        <a class="nav-link" href="{{ route('camara.index') }}">Cams</a>
+          <a class="nav-link" href="{{ route('novedad.index') }}">Novedades</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Menu</a>
+          <a class="nav-link" href="{{ route('camara.index') }}">Camaras</a>
         </li>
-        <li class="nav-item dropdown">
+        {{--  <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="configMenu" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
             Dropdown
@@ -43,7 +43,7 @@
             <a class="dropdown-item" href="#">MenuItem</a>
             <a class="dropdown-item" href="#">MenuItem</a>
           </div>
-        </li>
+        </li>  --}}
       </ul>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item dropdown">
