--- a/resources/views/novedad/index.edge
+++ b/resources/views/novedad/index.edge
@@ -1,85 +1,47 @@
 @layout('layouts/main')
 
-@set('TITLE', 'Novedades')
-@set('BUTTON_NEW', 'Agregar novedad')
-@set('BUTTON_EDIT', 'Editar')
-@set('BUTTON_SHOW', 'Ver')
-{{--  @set('ROUTE_NEW', 'novedad.create')
-@set('ROUTE_EDIT', 'novedad.edit')
-@set('ROUTE_SHOW', 'novedad.show')  --}}
-
 @section('content')
 <div class="d-flex align-items-center justify-content-between mb-4">
-  <h1>{{ TITLE }}</h1>
-  <a class="btn btn-primary btn-sm" href="#" role="button">{{ BUTTON_NEW }}</a>
-</div>
+  <h1>Novedades</h1>
+  <div>
 
-{{--  <nav class="nav nav-tabs">
-  <a class="nav-link active" href="{{ route('novedad.index') }}">Recientes</a>
-<a class="nav-link" href="{{ route('novedad.filter') }}">Filtradas</a>
-<a class="nav-link" href="#">Pendientes</a>
-<a class="nav-link" href="#">Archivadas</a>
-</nav> --}}
+  <a class="btn btn-primary btn-sm" href="#" role="button">Agregar novedad</a>
 
-{{--  <div class="dropdown">
-  <a class="btn btn-default btn-sm dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
+<div class="dropdown d-inline">
+  <a class="btn btn-secondary btn-sm dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
     aria-haspopup="true" aria-expanded="false">
     Filtrar
   </a>
 
   <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-  <form action="" class="px-4 py-3" method="POST">
+    <form action="" class="px-4 py-3" method="GET">
       {{ csrfField() }}
-<div class="form-group">
-  <label for="">Camara</label>
-  <select class="form-control" name="camara">
-    <option value=""></option>
-    @each(camara in camaras)
-    <option value="{{ camara.id }}" {{ camara.selected ? 'selected' : ''}}>{{ camara.nombre }}</option>
-    @endeach
-  </select>
-</div>
+      <div class="form-group">
+        <label for="">Camara</label>
+        <select class="form-control" name="camara">
+          <option value=""></option>
+          <option value="1">Cam1</option>
+          <option value="2">Cam2</option>
+        </select>
+      </div>
 
-<div class="form-group">
-  <label for="">Autor</label>
-  <select class="form-control" name="autor">
-    <option value=""></option>
-    <option value="1">User1</option>
-    <option value="2">User2</option>
-    <option value="3">User3</option>
-    <option value="4">User4</option>
-  </select>
-</div>
+      <div class="form-group">
+        <label for="">Autor</label>
+        <select class="form-control" name="autor">
+          <option value=""></option>
+          <option value="1">User1</option>
+          <option value="2">User2</option>
+          <option value="3">User3</option>
+          <option value="4">User4</option>
+        </select>
+      </div>
 
-<button type="submit" class="btn btn-primary">Filtrar</button>
-</form>
+      <button type="submit" class="btn btn-primary">Filtrar</button>
+    </form>
+  </div>
 </div>
-</div> --}}
-{{--
-<table class="table table-sm">
-  <thead class="thead-dark">
-    <tr>
-      <th>Fecha</th>
-      <th>Descripcion</th>
-      <th>Camara</th>
-      <th>acciones</th>
-    </tr>
-  </thead>
-  <tbody>
-    @each(novedad in novedades)
-    <tr>
-      <td>{{ datetime(novedad.fecha) }}</td>
-      <td>{{ novedad.descripcion }}</td>
-      <td>{{ novedad.camara.nombre }}</td>
-      <td>
-        <a class="btn btn-link" href="{{ route(ROUTE_EDIT, { params: { 'id': novedad.id }}) }}">{{ BUTTON_EDIT }}</a>
-        <a class="btn btn-link" href="{{ route(ROUTE_SHOW, { params: { 'id': novedad.id }}) }}">{{ BUTTON_SHOW }}</a>
-      </td>
-    </tr>
-    @endeach
-  </tbody>
-</table>
-  --}}
+</div>
+</div>
 
 <ul class="timeline">
   @each(novedad in novedades)
@@ -100,15 +62,15 @@
 
 @section('stylesheets')
 <style>
-/* Timeline holder */
-ul.timeline {
+  /* Timeline holder */
+  ul.timeline {
     list-style-type: none;
     position: relative;
     padding-left: 1.5rem;
-}
+  }
 
- /* Timeline vertical line */
-ul.timeline:before {
+  /* Timeline vertical line */
+  ul.timeline:before {
     content: ' ';
     background: #ddd;
     display: inline-block;
@@ -118,24 +80,24 @@ ul.timeline:before {
     height: 100%;
     z-index: 400;
     border-radius: 1rem;
-}
+  }
 
-li.timeline-item {
+  li.timeline-item {
     margin: 20px 0;
-}
+  }
 
-/* Timeline item arrow */
-.timeline-arrow {
+  /* Timeline item arrow */
+  .timeline-arrow {
     border-top: 0.5rem solid transparent;
     border-right: 0.5rem solid #fff;
     border-bottom: 0.5rem solid transparent;
     display: block;
     position: absolute;
     left: 2rem;
-}
+  }
 
-/* Timeline item circle marker */
-li.timeline-item::before {
+  /* Timeline item circle marker */
+  li.timeline-item::before {
     content: ' ';
     background: #ddd;
     display: inline-block;
@@ -147,17 +109,9 @@ li.timeline-item::before {
     height: 14px;
     z-index: 400;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-}
-
-
+  }
 </style>
 @endsection
 
 @section('javascripts')
-<script src="/js/tablesort.js"></script>
-<script>
-  $(document).ready(function(){
-    $('table').tablesort();
-  });
-</script>
 @endsection
