--- a/resources/views/novedad/create.edge
+++ b/resources/views/novedad/create.edge
@@ -1,12 +1,8 @@
 @layout('layouts/main')
 
-@set('TITLE', 'Novedad')
-@set('ROUTE_STORE', 'camara.novedad.store')
-@set('ROUTE_INDEX', 'camara.show')
-
 @section('content')
-<h1>{{ TITLE }}</h1>
-<form action="{{ route(ROUTE_STORE, { params: { 'camara_id': camara.id }}) }}" method="POST">
+<h1>Novedad</h1>
+<form action="{{ route('camara.novedad.store', { params: { 'camara_id': camara.id }}) }}" method="POST">
   {{ csrfField() }}
 
   <div class="form-group">
@@ -28,49 +24,8 @@
     </small>
     @endif
   </div>
-{{--
-  <div class="form-group">
-    @if(flashMessages.has('camara'))
-    @set('arreglo', flashMessages.get('camara'))
-    @else
-    @set('arreglo', [ 0,  1])
-    @endif
 
-    <label>Aplica a </label>
-    <select class="form-control pillbox" name="camara[]" multiple>
-      @each(camara in camaras)
-      <option value="{{camara.id}}" {{ arreglo.includes(''+camara.id)? 'selected=selected' : '' }}>
-      {{ camara.nombre }} - {{arreglo.includes(''+camara.id) }}</option>
-      @endeach
-    </select>
-    @if(flashMessages.has('errors.camara'))
-    <small class="form-text text-muted">
-      {{ flashMessages.get('errors.camara') }}
-    </small>
-    @endif
-  </div>
-  --}}
   <button type="submit" class="btn btn-primary">Guardar</button>
-  <a href="{{ route(ROUTE_INDEX, { params: { 'id': camara.id }}) }}" class="btn btn-link">Cancelar</a>
+  <a href="{{ route('camara.show', { params: { 'id': camara.id }}) }}" class="btn btn-link">Cancelar</a>
 </form>
-<p></p>
-
-
-
-@endsection
-
-@section('stylesheets')
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.1.0-beta.1/css/select2.min.css">
-<link href="/css/select2-bootstrap4.css" rel="stylesheet" />
-@endsection
-
-@section('javascripts')
-<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.1.0-beta.1/js/select2.min.js"></script>
-<script>
-  $(document).ready(function(){
-    $('.pillbox').select2({
-      theme: 'bootstrap4',
-    });
-  });
-</script>
 @endsection
