--- a/resources/views/novedad/edit.edge
+++ b/resources/views/novedad/edit.edge
@@ -1,12 +1,8 @@
 @layout('layouts/main')
 
-@set('TITLE', 'Novedad')
-@set('ROUTE_STORE', 'camara.novedad.update')
-@set('ROUTE_INDEX', 'camara.show')
-
 @section('content')
-<h1>{{ TITLE }}</h1>
-<form action="{{ route(ROUTE_STORE, { params: { camara_id: novedad.camaraId, id: novedad.id }}) }}?_method=PUT" method="POST">
+<h1>Novedad</h1>
+<form action="{{ route('camara.novedad.update', { params: { camara_id: novedad.camaraId, id: novedad.id }}) }}?_method=PUT" method="POST">
   {{ csrfField() }}
 
   <div class="form-group">
@@ -28,22 +24,8 @@
     </small>
     @endif
   </div>
-{{--
-  <div class="form-group">
-    <label>Aplica a </label>
-    <select class="form-control" name="camara[]" multiple>
-      @each(camara in camaras)
-    <option value="{{camara.id}}">{{ camara.nombre }}</option>
-      @endeach
-    </select>
-    @if(flashMessages.has('errors.camara'))
-    <small class="form-text text-muted">
-      {{ flashMessages.get('errors.camara') }}
-    </small>
-    @endif
-  </div>
-  --}}
+
   <button type="submit" class="btn btn-primary">Guardar</button>
-  <a href="{{ route(ROUTE_INDEX, { id: novedad.camaraId }) }}" class="btn btn-link">Cancelar</a>
+  <a href="{{ route('camara.show', { id: novedad.camaraId }) }}" class="btn btn-link">Cancelar</a>
 </form>
 @endsection
