--- a/resources/views/novedad/createMany.edge
+++ b/resources/views/novedad/createMany.edge
@@ -1,12 +1,8 @@
 @layout('layouts/main')
 
-@set('TITLE', 'Novedad')
-@set('ROUTE_STORE', 'novedad.store')
-@set('ROUTE_INDEX', 'novedad.index')
-
 @section('content')
-<h1>{{ TITLE }}</h1>
-<form action="{{ route(ROUTE_STORE) }}" method="POST">
+<h1>Novedad (no implementado)</h1>
+<form action="" method="POST">
   {{ csrfField() }}
 
   <div class="form-group">
@@ -19,6 +15,7 @@
     @endif
   </div>
 
+
   <div class="form-group">
     <label>Descripcion</label>
     <input type="text" class="form-control" name="descripcion" value="{{ flashMessages.get('descripcion') || '' }}">
@@ -30,19 +27,25 @@
   </div>
 
   <div class="form-group">
-    @if(flashMessages.has('camara'))
-    @set('arreglo', flashMessages.get('camara'))
-    @else
-    @set('arreglo', [ 0,  1])
-    @endif
+    <label>Aplica a</label>
+    <fieldset class="form-control" style="height: 150px; overflow: auto">
+      @each(camara in camaras)
+      <div class="form-check">
+      <input id="idCam_{{camara.id}}" class="form-check-input" type="checkbox" name="camaras[]" value="{{camara.id}}" >
+        <label for="idCam_{{camara.id}}" class="form-check-label" >{{ camara.nombre }} </label>
+      </div>
+      @endeach
+    </fieldset>
+  </div>
 
-    <label>Aplica a </label>
+  <div class="form-group">
+{{--
     <select class="form-control pillbox" name="camara[]" multiple>
       @each(camara in camaras)
-      <option value="{{camara.id}}" {{ arreglo.includes(''+camara.id)? 'selected=selected' : '' }}>
-      {{ camara.nombre }} - {{arreglo.includes(''+camara.id) }}</option>
+      <option value="{{camara.id}}">{{ camara.nombre }}</option>
       @endeach
     </select>
+  --}}
     @if(flashMessages.has('errors.camara'))
     <small class="form-text text-muted">
       {{ flashMessages.get('errors.camara') }}
@@ -51,17 +54,17 @@
   </div>
 
   <button type="submit" class="btn btn-primary">Guardar</button>
-  <a href="{{ route(ROUTE_INDEX) }}" class="btn btn-link">Cancelar</a>
+  <a href="{{ route('novedad.index') }}" class="btn btn-link">Cancelar</a>
 </form>
-<p></p>
 
-
+<p>
+  {{ inspect(flashMessages) }}
+</p>
 
 @endsection
 
 @section('stylesheets')
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.1.0-beta.1/css/select2.min.css">
-<link href="/css/select2-bootstrap4.css" rel="stylesheet" />
 @endsection
 
 @section('javascripts')
@@ -69,7 +72,6 @@
 <script>
   $(document).ready(function(){
     $('.pillbox').select2({
-      theme: 'bootstrap4',
     });
   });
 </script>
