--- a/resources/views/novedad/index.edge
+++ b/resources/views/novedad/index.edge
@@ -5,8 +5,6 @@
   <h1>Novedades</h1>
   <div>
 
-  <a class="btn btn-primary btn-sm" href="#" role="button">Agregar novedad</a>
-
 <div class="dropdown d-inline">
   <a class="btn btn-secondary btn-sm dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
     aria-haspopup="true" aria-expanded="false">
@@ -40,6 +38,8 @@
     </form>
   </div>
 </div>
+<a class="btn btn-primary btn-sm" href="{{ route('novedad.createmany')}}" role="button">Agregar novedad</a>
+
 </div>
 </div>
 
