--- a/resources/views/camara/editNovedad.edge
+++ b/resources/views/camara/editNovedad.edge
@@ -2,7 +2,7 @@
 
 @section('content')
 <h1>Novedad</h1>
-<form action="{{ route('novedad.update', { params: { id: novedad.id }}) }}?_method=PUT" method="POST">
+<form action="{{ route('camara.novedad.update', { params: { camara_id: novedad.camaraId, id: novedad.id }}) }}?_method=PUT" method="POST">
   {{ csrfField() }}
 
   <div class="form-group">
@@ -26,6 +26,6 @@
   </div>
 
   <button type="submit" class="btn btn-primary">Guardar</button>
-  <a href="{{ route('novedad.index') }}" class="btn btn-link">Cancelar</a>
+  <a href="{{ route('camara.show', { id: novedad.camaraId }) }}" class="btn btn-link">Cancelar</a>
 </form>
 @endsection
