--- a/resources/views/novedad/create.edge
+++ b/resources/views/novedad/create.edge
@@ -1,8 +1,8 @@
 @layout('layouts/main')
 
 @section('content')
-<h1>Novedad</h1>
-<form action="{{ route('camara.novedad.store', { params: { 'camara_id': camara.id }}) }}" method="POST">
+<h1>Novedad (no implementado)</h1>
+<form action="{{ route('novedad.store') }}" method="POST">
   {{ csrfField() }}
 
   <div class="form-group">
@@ -15,6 +15,7 @@
     @endif
   </div>
 
+
   <div class="form-group">
     <label>Descripcion</label>
     <input type="text" class="form-control" name="descripcion" value="{{ flashMessages.get('descripcion') || '' }}">
@@ -25,7 +26,48 @@
     @endif
   </div>
 
+  <div class="form-group">
+    <label>Aplica a</label>
+    <fieldset class="form-control" style="height: 150px; overflow: auto">
+      @each(camara in camaras)
+      <div class="form-check">
+      <input id="idCam_{{camara.id}}" class="form-check-input" type="checkbox" name="camaras[]" value="{{camara.id}}" >
+        <label for="idCam_{{camara.id}}" class="form-check-label" >{{ camara.nombre }} </label>
+      </div>
+      @endeach
+    </fieldset>
+    @if(flashMessages.has('errors.camaras'))
+    <small class="form-text text-muted">
+      {{ flashMessages.get('errors.camaras') }}
+    </small>
+    @endif
+  </div>
+
+  <div class="form-group">
+{{--
+    <select class="form-control pillbox" name="camara[]" multiple>
+      @each(camara in camaras)
+      <option value="{{camara.id}}">{{ camara.nombre }}</option>
+      @endeach
+    </select>
+  --}}
+  </div>
+
   <button type="submit" class="btn btn-primary">Guardar</button>
-  <a href="{{ route('camara.show', { params: { 'id': camara.id }}) }}" class="btn btn-link">Cancelar</a>
+  <a href="{{ route('novedad.index') }}" class="btn btn-link">Cancelar</a>
 </form>
+@endsection
+
+@section('stylesheets')
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.1.0-beta.1/css/select2.min.css">
+@endsection
+
+@section('javascripts')
+<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.1.0-beta.1/js/select2.min.js"></script>
+<script>
+  $(document).ready(function(){
+    $('.pillbox').select2({
+    });
+  });
+</script>
 @endsection
