--- a/resources/views/novedad/index.edge
+++ b/resources/views/novedad/index.edge
@@ -4,7 +4,7 @@
 <div class="d-flex align-items-center justify-content-between mb-4">
   <h1>Novedades</h1>
   <div>
-
+    {{--
 <div class="dropdown d-inline">
   <a class="btn btn-secondary btn-sm dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
     aria-haspopup="true" aria-expanded="false">
@@ -14,35 +14,58 @@
   <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
     <form action="" class="px-4 py-3" method="GET">
       {{ csrfField() }}
-      <div class="form-group">
-        <label for="">Camara</label>
-        <select class="form-control" name="camara">
-          <option value=""></option>
-          <option value="1">Cam1</option>
-          <option value="2">Cam2</option>
-        </select>
-      </div>
+    <div class="form-group">
+      <label for="">Camara</label>
+      <select class="form-control" name="camara">
+        <option value=""></option>
+        <option value="1">Cam1</option>
+        <option value="2">Cam2</option>
+      </select>
+    </div>
 
-      <div class="form-group">
-        <label for="">Autor</label>
-        <select class="form-control" name="autor">
-          <option value=""></option>
-          <option value="1">User1</option>
-          <option value="2">User2</option>
-          <option value="3">User3</option>
-          <option value="4">User4</option>
-        </select>
-      </div>
+    <div class="form-group">
+      <label for="">Autor</label>
+      <select class="form-control" name="autor">
+        <option value=""></option>
+        <option value="1">User1</option>
+        <option value="2">User2</option>
+        <option value="3">User3</option>
+        <option value="4">User4</option>
+      </select>
+    </div>
 
-      <button type="submit" class="btn btn-primary">Filtrar</button>
+    <button type="submit" class="btn btn-primary">Filtrar</button>
     </form>
   </div>
 </div>
-<a class="btn btn-primary btn-sm" href="{{ route('novedad.createmany')}}" role="button">Agregar novedad</a>
-
+--}}
+    <a class="btn btn-primary btn-sm" href="{{ route('novedad.create')}}" role="button">Agregar novedad</a>
+  </div>
 </div>
-</div>
 
+<table class="table">
+  <thead>
+    <tr>
+      <th>Fecha</th>
+      <th>Camara</th>
+      <th>Novedad</th>
+      <th>acciones</th>
+    </tr>
+  </thead>
+  <tbody>
+    @each(novedad in novedades)
+      <tr>
+        <td>{{ datetime(novedad.fecha) }}</td>
+        <td>{{ novedad.descripcion }}</td>
+        <td>{{ novedad.camara.nombre }}</td>
+        <td>
+          <a href="{{ route('novedad.edit', { id: novedad.id })}}">Editar</a>
+        </td>
+      </tr>
+    @endeach
+  </tbody>
+</table>
+{{--
 <ul class="timeline">
   @each(novedad in novedades)
   <li class="timeline-item bg-white rounded ml-3 p-4 shadow">
@@ -56,10 +79,11 @@
       {{ novedad.descripcion }}
     </p>
     <hr>
-  <a href="{{ route('novedad.edit', { id: novedad.id })}}">Editar</a>
+    <a href="{{ route('novedad.edit', { id: novedad.id })}}">Editar</a>
   </li>
   @endeach
 </ul>
+  --}}
 @endsection
 
 @section('stylesheets')
