--- a/resources/views/novedad/index.edge
+++ b/resources/views/novedad/index.edge
@@ -4,44 +4,33 @@
 <div class="d-flex align-items-center justify-content-between mb-4">
   <h1>Novedades</h1>
   <div>
-    {{--
-<div class="dropdown d-inline">
-  <a class="btn btn-secondary btn-sm dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
-    aria-haspopup="true" aria-expanded="false">
-    Filtrar
-  </a>
-
-  <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-    <form action="" class="px-4 py-3" method="GET">
-      {{ csrfField() }}
-    <div class="form-group">
-      <label for="">Camara</label>
-      <select class="form-control" name="camara">
-        <option value=""></option>
-        <option value="1">Cam1</option>
-        <option value="2">Cam2</option>
-      </select>
-    </div>
-
-    <div class="form-group">
-      <label for="">Autor</label>
-      <select class="form-control" name="autor">
-        <option value=""></option>
-        <option value="1">User1</option>
-        <option value="2">User2</option>
-        <option value="3">User3</option>
-        <option value="4">User4</option>
-      </select>
-    </div>
-
-    <button type="submit" class="btn btn-primary">Filtrar</button>
-    </form>
-  </div>
-</div>
---}}
     <a class="btn btn-primary btn-sm" href="{{ route('novedad.create')}}" role="button">Agregar novedad</a>
   </div>
 </div>
+
+<div class="dropdown">
+  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+    aria-haspopup="true" aria-expanded="false">
+    Filtrar
+  </button>
+  <div class="dropdown-menu">
+    <form class="px-4 py-3" _action="{{ route('novedad.index') }}">
+
+      <div class="form-group">
+        <select class="custom-select" name="camara">
+          <option value="">Cualquier camara</option>
+          @each(camara in camaras)
+          <option value="{{ camara.id}}" {{ camara.selected ? 'selected' : ''}} >{{camara.nombre}}</option>
+          @endeach
+        </select>
+      </div>
+      <button type="submit" class="btn btn-primary">Aplicar</button>
+      <a class="btn btn-default" href="{{ route('novedad.index') }}">Quitar filtros</a>
+    </form>
+  </div>
+</div>
+
+
 
 <table class="table">
   <thead>
@@ -56,8 +45,8 @@
     @each(novedad in novedades)
       <tr>
         <td>{{ datetime(novedad.fecha) }}</td>
-        <td>{{ novedad.descripcion }}</td>
         <td>{{ novedad.camara.nombre }}</td>
+        <td>{{ novedad.descripcion }}</td>
         <td>
           <a href="{{ route('novedad.edit', { id: novedad.id })}}">Editar</a>
         </td>
