--- a/resources/views/novedad/create.edge
+++ b/resources/views/novedad/create.edge
@@ -1,7 +1,7 @@
 @layout('layouts/main')
 
 @section('content')
-<h1>Novedad (no implementado)</h1>
+<h1>Ficha de novedad</h1>
 <form action="{{ route('novedad.store') }}" method="POST">
   {{ csrfField() }}
 
@@ -30,9 +30,9 @@
     <label>Aplica a</label>
     <fieldset class="form-control" style="height: 150px; overflow: auto">
       @each(camara in camaras)
-      <div class="form-check">
-      <input id="idCam_{{camara.id}}" class="form-check-input" type="checkbox" name="camaras[]" value="{{camara.id}}" >
-        <label for="idCam_{{camara.id}}" class="form-check-label" >{{ camara.nombre }} </label>
+      <div class="custom-control custom-switch _custom-checkbox">
+        <input id="chk_{{camara.id}}" type="checkbox" class="custom-control-input" name="camaras[]" value="{{ camara.id}}">
+        <label for="chk_{{camara.id}}" class="custom-control-label">{{ camara.nombre }}</label>
       </div>
       @endeach
     </fieldset>
@@ -43,15 +43,6 @@
     @endif
   </div>
 
-  <div class="form-group">
-{{--
-    <select class="form-control pillbox" name="camara[]" multiple>
-      @each(camara in camaras)
-      <option value="{{camara.id}}">{{ camara.nombre }}</option>
-      @endeach
-    </select>
-  --}}
-  </div>
 
   <button type="submit" class="btn btn-primary">Guardar</button>
   <a href="{{ route('novedad.index') }}" class="btn btn-link">Cancelar</a>
@@ -59,15 +50,11 @@
 @endsection
 
 @section('stylesheets')
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.1.0-beta.1/css/select2.min.css">
 @endsection
 
 @section('javascripts')
-<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.1.0-beta.1/js/select2.min.js"></script>
 <script>
   $(document).ready(function(){
-    $('.pillbox').select2({
-    });
   });
 </script>
 @endsection
