--- a/resources/views/novedad/index.edge
+++ b/resources/views/novedad/index.edge
@@ -17,7 +17,7 @@
     <form class="px-4 py-3" _action="{{ route('novedad.index') }}">
 
       <div class="form-group">
-        <select class="custom-select" name="camara">
+        <select class="custom-select custom-select-sm" name="camara">
           <option value="">Cualquier camara</option>
           @each(camara in camaras)
           <option value="{{ camara.id}}" {{ camara.selected ? 'selected' : ''}} >{{camara.nombre}}</option>
