--- a/resources/views/camara/index.edge
+++ b/resources/views/camara/index.edge
@@ -6,10 +6,9 @@
   <a href="{{ route('camara.create') }}" class="btn btn-sm btn-primary">Agregar camara</a>
 </div>
 
-<table class="table table-sm">
+{{--  <table class="table table-sm">
   <thead class="thead-dark">
     <tr>
-      {{--  <th>Id</th>  --}}
       <th>Nombre</th>
       <th>acciones</th>
     </tr>
@@ -17,15 +16,38 @@
   <tbody>
     @each(camara in camaras)
     <tr>
-      {{--  <td>{{ camara.id }}</td>  --}}
-      <td>{{ camara.nombre }}</td>
       <td>
-        {{--  <a class="btn btn-link" href="{{ route('camara.show', { params: { 'id': camara.id }}) }}">Novedades</a>  --}}
-        <a class="btn btn-link" href="{{ route('camara.edit', { params: { 'id': camara.id }}) }}">Editar</a>
-      </td>
-    </tr>
-    @endeach
-  </tbody>
+        <a class="btn btn-link"
+          href="{{ route('camara.show', { params: { 'id': camara.id }}) }}">{{ camara.nombre }}</a>
+</td>
+<td>
+  <a class="btn btn-link" href="{{ route('camara.edit', { params: { 'id': camara.id }}) }}">Renombrar</a>
+</td>
+</tr>
+@endeach
+</tbody>
 </table>
+--}}
+<div class="_container _mt-4">
+  <div class="row">
+    @each(camara in camaras)
+    <div class="col-sm-6 col-md-4 col-lg-3 mb-3">
+      <div class="card" _style="width: 20rem;">
+        <div class="card-body">
+          <h5 class="card-title" style="transform: rotate(0);">
+            {{ camara.nombre }}
+            <a href="{{ route('camara.edit', { params: { 'id': camara.id }}) }}" class="card-link stretched-link"></a>
+          </h5>
+          <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+          <a href="{{ route('camara.show', { params: { 'id': camara.id }}) }}" class="card-link">Novedades</a>
+          <a href="{{ route('camara.edit', { params: { 'id': camara.id }}) }}" class="card-link">Renombrar</a>
+        </div>
+      </div>
+    </div>
+    @endeach
+  </div>
+</div>
 
 @endsection
