--- a/resources/views/camara/index.edge
+++ b/resources/views/camara/index.edge
@@ -6,7 +6,20 @@
   <a href="{{ route('camara.create') }}" class="btn btn-sm btn-primary">Agregar camara</a>
 </div>
 
-{{--  <table class="table table-sm">
+<div class="btn-toolbar justify-content-between mb-3 border-top border-bottom py-2" role="toolbar"
+  aria-label="Toolbar with button groups">
+  <div class="btn-group" role="group" aria-label="First group">
+    <a href="{{ route('camara.index.table') }}" class="btn btn-secondary">Table</a>
+    <a href="{{ route('camara.index.cards') }}" class="btn btn-secondary">Cards</a>
+  </div>
+  {{ show_as }}
+  <div class="btn-group" role="group" aria-label="First group">
+    <a href="{{ route('camara.create') }}" class="btn btn-primary">Agregar camara</a>
+  </div>
+</div>
+
+@if(show_as == 'table')
+<table class="table table-sm">
   <thead class="thead-dark">
     <tr>
       <th>Nombre</th>
@@ -19,15 +32,15 @@
       <td>
         <a class="btn btn-link"
           href="{{ route('camara.show', { params: { 'id': camara.id }}) }}">{{ camara.nombre }}</a>
-</td>
-<td>
-  <a class="btn btn-link" href="{{ route('camara.edit', { params: { 'id': camara.id }}) }}">Renombrar</a>
-</td>
-</tr>
-@endeach
-</tbody>
+      </td>
+      <td>
+        <a class="btn btn-link" href="{{ route('camara.edit', { params: { 'id': camara.id }}) }}">Renombrar</a>
+      </td>
+    </tr>
+    @endeach
+  </tbody>
 </table>
---}}
+@else
 <div class="_container _mt-4">
   <div class="row">
     @each(camara in camaras)
@@ -49,5 +62,6 @@
     @endeach
   </div>
 </div>
+@endif
 
 @endsection
