--- a/resources/views/camara/index.edge
+++ b/resources/views/camara/index.edge
@@ -8,14 +8,14 @@
 
 <div class="btn-toolbar justify-content-between mb-3 border-top border-bottom py-2" role="toolbar"
   aria-label="Toolbar with button groups">
+  <div></div>
   <div class="btn-group" role="group" aria-label="First group">
     <a href="{{ route('camara.index.table') }}" class="btn btn-secondary">Table</a>
     <a href="{{ route('camara.index.cards') }}" class="btn btn-secondary">Cards</a>
   </div>
-  {{ show_as }}
-  <div class="btn-group" role="group" aria-label="First group">
+  {{--  <div class="btn-group" role="group" aria-label="First group">
     <a href="{{ route('camara.create') }}" class="btn btn-primary">Agregar camara</a>
-  </div>
+  </div>  --}}
 </div>
 
 @if(show_as == 'table')
