Styles: Toolbars styling

--- a/resources/views/novedad/index.edge
+++ b/resources/views/novedad/index.edge
@@ -10,8 +10,9 @@
 
 <div class="border-top border-bottom py-2 mb-3">
   <div class="dropdown">
-    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
       aria-haspopup="true" aria-expanded="false">
+      <i class="fa fa-filter"></i>
       Filtrar
     </button>
     <div class="dropdown-menu">
