--- a/resources/views/camara/index.edge
+++ b/resources/views/camara/index.edge
@@ -8,10 +8,11 @@
 
 <div class="btn-toolbar justify-content-between mb-3 border-top border-bottom py-2" role="toolbar"
   aria-label="Toolbar with button groups">
-  <div></div>
   <div class="btn-group" role="group" aria-label="First group">
-    <a href="{{ route('camara.index.table') }}" class="btn btn-secondary">Table</a>
-    <a href="{{ route('camara.index.cards') }}" class="btn btn-secondary">Cards</a>
+    <a href="{{ route('camara.index.table') }}" class="btn btn-secondary">
+      <i class="fa fa-list"></i>&nbsp;Table</a>
+    <a href="{{ route('camara.index.cards') }}" class="btn btn-secondary">
+      <i class="fa fa-list"></i>&nbsp;Cards</a>
   </div>
   {{--  <div class="btn-group" role="group" aria-label="First group">
     <a href="{{ route('camara.create') }}" class="btn btn-primary">Agregar camara</a>
