--- a/resources/views/layouts/main.edge
+++ b/resources/views/layouts/main.edge
@@ -8,6 +8,7 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   @!section('stylesheets')
 
   <title>
@@ -84,6 +85,7 @@
 
     @section('content')
     @endsection
+
   </div>
 
   <!-- Optional JavaScript -->
