--- a/resources/views/camara/index.edge
+++ b/resources/views/camara/index.edge
@@ -6,7 +6,7 @@
   <a href="{{ route('camara.create') }}" class="btn btn-sm btn-primary">Agregar camara</a>
 </div>
 
-<div class="btn-toolbar justify-content-between mb-3 border-top border-bottom py-2" role="toolbar"
+{{--  <div class="btn-toolbar justify-content-between mb-3 border-top border-bottom py-2" role="toolbar"
   aria-label="Toolbar with button groups">
   <div class="btn-group" role="group" aria-label="First group">
     <a href="{{ route('camara.index.table') }}" class="btn btn-secondary">
@@ -14,10 +14,7 @@
     <a href="{{ route('camara.index.cards') }}" class="btn btn-secondary">
       <i class="fa fa-list"></i>&nbsp;Cards</a>
   </div>
-  {{--  <div class="btn-group" role="group" aria-label="First group">
-    <a href="{{ route('camara.create') }}" class="btn btn-primary">Agregar camara</a>
-  </div>  --}}
-</div>
+</div>  --}}
 
 @if(show_as == 'table')
 <table class="table table-sm">
