--- a/resources/views/camara/show.edge
+++ b/resources/views/camara/show.edge
@@ -4,8 +4,8 @@
 <div class="d-flex align-items-center justify-content-between mb-4">
   <h1>Camara {{ camara.nombre }}</h1>
   <div>
-    <a href="{{ route( 'camara.novedad.create', { params: {'camara_id': camara.id}} ) }}"
-      class="btn btn-sm btn-primary">Agregar novedad</a>
+    {{--  <a href="{{ route( 'camara.novedad.create', { params: {'camara_id': camara.id}} ) }}"
+      class="btn btn-sm btn-primary">Agregar novedad</a>  --}}
     <a href="{{ route( 'camara.index' ) }}" class="btn btn-sm btn-secondary">Volver</a>
   </div>
 </div>
@@ -24,7 +24,7 @@
       <td>{{ datetime(novedad.fecha) }}</td>
       <td>{{ novedad.descripcion }}</td>
       <td>
-        <a href="{{ route('camara.novedad.edit', {'camara_id': camara.id, 'id': novedad.id}) }}">Editar</a>
+        {{--  <a href="{{ route('camara.novedad.edit', {'camara_id': camara.id, 'id': novedad.id}) }}">Editar</a>  --}}
       </td>
     </tr>
     @endeach
